feat: add unified SQL execution runtime contract